samples/_failures_safe/1761283615_becf8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e69991e4.c: In function ‘main’:
./samples/SAFE/__tmp_e69991e4.c:147:5: error: expected declaration or statement at end of input
  147 |     } else {
      |     ^
./samples/SAFE/__tmp_e69991e4.c:147:5: error: expected declaration or statement at end of input
